--- a/express-server/package.json
+++ b/express-server/package.json
@@ -1,6 +1,9 @@
 {
   "name": "express-server",
   "version": "0.0.0",
+  "engines": {
+    "node": "14.18.1"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -8,11 +11,13 @@
     "serverstart": "DEBUG=express-server:* npm run devstart"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-rate-limit": "^5.5.1",
+    "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
